Added ability to get character metrics (Glyph metrics, see http://freetype.sourceforge.net/freetype2/docs/tutorial/step2.html

--- a/pyfreetype.vcproj
+++ b/pyfreetype.vcproj
@@ -465,6 +465,14 @@
 				RelativePath=".\source\pyfreetype_font.h"
 				>
 			</File>
+			<File
+				RelativePath=".\source\pyfreetype_glyphmetrics.c"
+				>
+			</File>
+			<File
+				RelativePath=".\source\pyfreetype_glyphmetrics.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
