Added a new example file to build a bitmap font page from font and font size.  Added ubuntu font family as test data.  Font objects now expose members containing the font global style metrics and the current size metrics.  get_char_bitmap() now returns a struct instead of a tuple and will set bitmap_left and bitmap_top if the font glyph is a bitmap.  All font bitmaps are now converted to 8bpp with pitch of 1 which would have fixed any issues with glyphs and fonts not rendering to these specifications. Fixed global problem where all members we set to full access, but in all our cases we want them READONLY.  Added some helper macros to convert between various fixed point representations used by FT.

--- a/pyfreetype.vcproj
+++ b/pyfreetype.vcproj
@@ -114,8 +114,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				EnableIntrinsicFunctions="true"
+				Optimization="0"
+				EnableIntrinsicFunctions="false"
 				AdditionalIncludeDirectories="freetype/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;PYFREETYPE_EXPORTS"
 				RuntimeLibrary="2"
@@ -450,6 +450,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\source\pyfreetype_bitmapdata.c"
+				>
+			</File>
+			<File
+				RelativePath=".\source\pyfreetype_bitmapdata.h"
+				>
+			</File>
+			<File
 				RelativePath=".\source\pyfreetype_charmapiter.c"
 				>
 			</File>
@@ -471,6 +479,18 @@
 			</File>
 			<File
 				RelativePath=".\source\pyfreetype_glyphmetrics.h"
+				>
+			</File>
+			<File
+				RelativePath=".\source\pyfreetype_helpers.h"
+				>
+			</File>
+			<File
+				RelativePath=".\source\pyfreetype_sizemetrics.c"
+				>
+			</File>
+			<File
+				RelativePath=".\source\pyfreetype_sizemetrics.h"
 				>
 			</File>
 		</Filter>
